# Computer-Network-Project

./: Makefile  README.md
ClientFolder/: CMakeLists.txt  Connection.h  client.cpp  client.h  client.ui  includes.cpp  includes.h  main.cpp
ServerFolder/: CastDocServ  CastDocServ.cpp  ConfigFile
